--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "pelican-mg"]
-	path = pelican-mg
-	url = https://github.com/lucachr/pelican-mg
-[submodule "blue-penguin"]
-	path = blue-penguin
-	url = https://github.com/jody-frankowski/blue-penguin
 [submodule "pelican-svbtle"]
 	path = pelican-svbtle
-	url = https://github.com/wting/pelican-svbtle
+	url = https://github.com/wting/pelican-svbtle.git
+[submodule "blue-penguin"]
+	path = blue-penguin
+	url = https://github.com/jody-frankowski/blue-penguin.git
+[submodule "pelican-mg"]
+	path = pelican-mg
+	url = https://github.com/lucachr/pelican-mg.git
